--- a/src/main/webapp/employees/products.html
+++ b/src/main/webapp/employees/products.html
@@ -21,14 +21,15 @@
 
             <div class="row">
                 <div class="col-2">
+                    <div class="catbox">
 
-                    <h2>&emsp; Categorie: </h2><br>
+                        <h2>&emsp; Categorie: </h2><br>
 
 
-                    <form id="categories" >lijst</form>
-                    <br>
-                    <button type="button" onclick="location.href = 'edit-product.html'">Nieuw Product</button>
-
+                        <form id="categories" >lijst</form>
+                        <br>
+                        <button id="newButton" type="button" >Nieuw Product</button>
+                    </div>
                 </div>
                 <div class="col-10"><div  id="scroll75" >
                         <table id="productsTable" class="display" cellspacing="0" width="100%">
