--- a/src/main/webapp/customer_confirmation.html
+++ b/src/main/webapp/customer_confirmation.html
@@ -51,7 +51,7 @@
                 <div id="city">City</div>
                 <div id="zip">Zip</div>
                 <br/>
-                <button><a  href="addresses.html">Verander Adres</a></button>
+                <button><a  href="edit-adress.html">Verander Adres</a></button>
             </div>
        
        <button id='confirmation_button'>ECHTE BEVESTIGING</button>
