--- a/src/main/webapp/edit-adress.html
+++ b/src/main/webapp/edit-adress.html
@@ -39,7 +39,7 @@ and open the template in the editor.
                         </TD>
                     </TR>
                     <TR>
-                        <TD><b>Voornaam</b></TD>
+                        <TD><b>Achternaam</b></TD>
                         <TD>
                             <input id="achternaamId" type="text" name="achternaam" required>
                         </TD>
@@ -54,12 +54,6 @@ and open the template in the editor.
                         <TD><b>Nummer</b></TD>
                         <TD>
                             <input id="nummerId" type="number" name="nummer">
-                        </TD>
-                    </TR>
-                    <TR>
-                        <TD><b>Straat</b></TD>
-                        <TD>
-                            <input id="straatId" type="text" name="street" required>
                         </TD>
                     </TR>
                     <TR>
