--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -41,7 +41,7 @@
                         <br>
                         <div class="search_bar">
                             Zoek binnen selectie:
-                            <input type="text" id="cheese_name" />
+                            <input type="text" id="cheese_name" onkeydown="searchCheese()" />
                             <button onclick="searchCheese()"><img  src="/Jee-Shop/IMG/loop.png" height="25" width="30" /></button>
                         </div>
                     </div><br>
