--- a/src/main/webapp/edit-adress.html
+++ b/src/main/webapp/edit-adress.html
@@ -77,7 +77,7 @@ and open the template in the editor.
                         </TD>
                     </TR>
                     <TR>
-                        <TD><b>Voorzetsels van achternaam</b></TD>
+                        <TD><b>tussenvoegsels</b></TD>
                         <TD>
                             <select id="insertionId" name="insertion" required></select>                        
                         </TD>
