--- a/src/main/webapp/edit-adress.html
+++ b/src/main/webapp/edit-adress.html
@@ -20,7 +20,7 @@ and open the template in the editor.
         <div>
 
 
-            <form id="userForm">
+            <form id="adresForm">
                 <h2>Adres aanpassen /toevoegen</h2>
 
                 <TABLE class='formTable'>
