--- a/src/main/webapp/edit-adress.html
+++ b/src/main/webapp/edit-adress.html
@@ -79,7 +79,7 @@ and open the template in the editor.
                     <TR>
                         <TD><b>tussenvoegsels</b></TD>
                         <TD>
-                            <select id="insertionId" name="insertion" required></select>                        
+                            <input id="insertionId" type="text" name="insertion" >                        
                         </TD>
                     </TR>
                 </table>
