--- a/src/main/webapp/employees/orders.html
+++ b/src/main/webapp/employees/orders.html
@@ -1,15 +1,9 @@
-<!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
 <html>
     <head>
         <title>Kaas Shop</title>
-        <script src ="../JS/jquery.js"></script>
-        <script src ="../JS/orders-views.js"></script>
-        <link href="../CSS/grid.css" rel="stylesheet" />
+        <script src ="/Jee-Shop/JS/jquery.js"></script>
+        <script src ="/Jee-Shop/JS/orders-views.js"></script>
+        <link href="/Jee-Shop/CSS/grid.css" rel="stylesheet" />
         <link href="../CSS/simple.css" rel="stylesheet" />
     </head>
 
@@ -23,27 +17,19 @@ and open the template in the editor.
                 <div class="col-12">
                     <h2 class="title"> Order Overzicht!</h2><br>
                 </div>
-            </div>
-
-
-
+            </div> <!--end row 1-->
 
 
             <div class="row" >
 
+                <div class="col-1" ></div>
+                <div class="col-10" >
+                    <h2 class="page-header" align="center">
+                        Overzicht
+                    </h2>
+                    <div id="scroll75"  >
 
-
-
-                <div class="col-lg-12" ><div id="scroll75"  >
-
-
-
-                        <!--  <div class="menu" id="table"> -->
-                        <h2 class="page-header" align="center">
-                            Overzicht
-                        </h2>
                         <table id="table_order" class="display" cellspacing="0" width="100%">
-
                             <thead>
                                 <tr>
                                     <th  hidden>Id</th>
@@ -75,24 +61,16 @@ and open the template in the editor.
                         </table>
                     </div>
                 </div>
-            </div>
+                <div class="col-1" >  </div>
+            </div> <!--end row 2-->
+            <div class="row" ><div class="col-12" ><h2 align="center">View details</h2></div></div>
 
             <div class="row" >
-
-
-
-
-                <div class="col-lg-12" >
-
-                    <div id="scroll75"  >
-
-
-
-
-                        <h2> View details</h2>
-
-                        <table align="left" id="table_viewFinalSubs" class="display" cellspacing="0" width="100%">
-
+                <div class="col-1" >  </div>
+                <div class="col-10" >
+<!--                    <h2 align="center"> View details</h2>-->
+                    
+                        <table  id="table_viewFinalSubs" class="display" cellspacing="0" width="100%">
                             <thead>
                                 <tr>
                                     <th  hidden>Id</th>
@@ -107,26 +85,24 @@ and open the template in the editor.
 
                                 </tr>
                             </thead>
+                             <tfoot id="lookhere">
+                                <tr>
+                                    <th  hidden>Id</th>
+                                    <th align="left">WinkelwagenId</th>
+                                    <th align="left">ProductNaam</th>
+                                    <th align="left">Product Category</th>
+                                    <th align="left">Product Merk</th>
+                                    <th align="left">Product prijs</th>
+                                    <th align="left">Aantal</th>
+                                    <th align="left">SubOrder totaalPrijs</th>
+                                    <th align="left">TotaalPrijs</th>
+
+                                </tr>
+                            </tfoot>
                         </table>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                    </div>
                 </div> 
-            </div>     
-        </div>
+            </div>  
+        </div> <!-- end container-->
 
 
     </body>
